BAŁTEX-4 Dodanie sociali oraz sekcji testimonials

--- a/prod/doc.html
+++ b/prod/doc.html
@@ -10,13 +10,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width initial-scale=1">
     <meta name="format-detection" content="telephone=no">
-    <title>Boilerplate - demo titile</title>
+    <meta property="og:url" content="http://www.your-domain.com/your-page.html">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Bałtex. Transport międzynarodowy">
+    <meta property="og:description" content="Boilerplate - demo description">
+    <meta property="og:image" content="">
+    <title>Bałtex. Transport międzynarodowy</title>
     <script src="https://use.fontawesome.com/60998be330.js"></script>
     <link rel="shortcut icon" href="assets/images/favicon.ico">
     <link rel="apple-touch-icon" href="assets/images/favicon.png">
     <link rel="stylesheet" href="assets/css/style.min.css">
   </head>
   <body class="css-animate dom-body">
+    <div class="social-bar">
+      <div class="social-bar__inner">
+        <ul class="list-unstyled social-bar__list">
+          <li class="social-bar__element"><a href="#" title="Udostępnij stronę na Facebooku" data-tooltipster="{&quot;side&quot;:&quot;left&quot;,&quot;animation&quot;:&quot;fade&quot;}" rel="nofollow" class=" tooltipster social-bar__anchor social-bar__anchor--fb"><i aria-hidden="true" class="fa fa-facebook"></i></a></li>
+          <li class="social-bar__element"><a href="#" title="Udostępnij stronę na Twitterze" data-tooltipster="{&quot;side&quot;:&quot;left&quot;,&quot;animation&quot;:&quot;fade&quot;}" rel="nofollow" class="tooltipster social-bar__anchor social-bar__anchor--tw"><i aria-hidden="true" class="fa fa-twitter"></i></a></li>
+          <li class="social-bar__element"><a href="https://plus.google.com/share?url=" title="Udostępnij stronę na Google+" data-tooltipster="{&quot;side&quot;:&quot;left&quot;,&quot;animation&quot;:&quot;fade&quot;}" rel="nofollow" class="tooltipster social-bar__anchor social-bar__anchor--gp"><i aria-hidden="true" class="fa fa-google-plus"></i></a></li>
+        </ul>
+      </div>
+    </div>
     <div class="component js-cookies-policy">
       <div class="cookies-policy">
         <div class="container">
@@ -49,8 +63,8 @@
                         <div class="nav-bar__dropdown">
                           <ul class="nav-bar__submenu list-unstyled">
                             <li><a href="#" title="Informacje kontaktowe"><i aria-hidden="true" class="fa fa-envelope"></i><span>Kontakt</span></a></li>
-                            <li><a href="#" title="Wydrukuj stronę"><i aria-hidden="true" class="fa fa-print"></i><span>Drukuj</span></a></li>
-                            <li><a href="#" title="Dodaj do ulubionych"><i aria-hidden="true" class="fa fa-bookmark"></i><span>Ulubione</span></a></li>
+                            <li><a href="#" title="Wydrukuj stronę" class="js-window-print"><i aria-hidden="true" class="fa fa-print"></i><span>Drukuj</span></a></li>
+                            <li><a href="#" title="Dodaj do ulubionych" class="js-bookmark-application"><i aria-hidden="true" class="fa fa-bookmark"></i><span>Ulubione</span></a></li>
                           </ul>
                           <div class="nav-bar__divider">
                             <hr>
