BAŁTEX-5 Dodanie Testimonials, oraz namiastki slidera

--- a/prod/doc.html
+++ b/prod/doc.html
@@ -177,6 +177,34 @@
           </div>
         </div>
       </main>
+      <footer class="footer">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-3"></div>
+            <div class="col-md-5">
+              <div class="widget widget--footer">
+                <div class="widget-inner">
+                  <h5 class="widget_title">Informacje kontaktowe	</h5>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="widget widget--footer">
+                <div class="widget-inner">
+                  <h5 class="widget_title">Firma Bałtex</h5>
+                  <ul class="list-unstyled">
+                    <li><a href="#" title="Transport międzynarodowy">Transport międzynarodowy</a></li>
+                    <li><a href="#" title="Sprzedaż tarcicy">Sprzedaż tarcicy</a></li>
+                    <li><a href="#" title="Magazyn czasowego składowania">Magazyn czasowego składowania</a></li>
+                    <li><a href="#" title="Faq">FAQ		</a></li>
+                    <li><a href="#" title="Kontakt">Kontakt</a></li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </footer>
     </div>
     <script src="assets/js/vendor.min.js"></script>
     <script src="assets/js/plugins/plugins.min.js"></script>
