--- a/prod/index.html
+++ b/prod/index.html
@@ -201,7 +201,7 @@
             </div>
           </div>
         </section>
-        <section class="section section--pattern section--full">
+        <section class="section section--pattern section--bottom0">
           <div class="container">
             <div class="row">
               <div class="col-xs-12">
@@ -219,7 +219,75 @@
             </div>
           </div>
         </section>
+        <section class="section section--motive">
+          <div class="container">
+            <div class="row">
+              <div class="col-xs-12">
+                <header class="text-xs-center text-white">
+                  <h3>Piszą..., a Ty czytaj</h3>
+                  <h4>Różne rzeczy, czasem lepsze, czasem </h4>
+                  <p>&nbsp;</p>
+                </header>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-xs-12">
+                <div data-MDitems="2" data-SMitems="2" data-XSitems="1" data-dots="true" data-centerPadding="30px" data-arrows="false" data-infinite="false" class="ct-js-slick">
+                  <div class="item">
+                    <div class="component feature-box">
+                      <blockquote class="feature-box__blockquote"><i class="fa fa-quote-left feature-box__quote feature-box__quote--top"></i>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque volutpat ex eget nunc facilisis, vitae posuere ligula ultricies. Mauris fringilla mi quis nisi iaculis accumsan. Phasellus eu nisi viverra nunc ultrices rhoncus ut at dui.<i class="fa fa-quote-right feature-box__quote feature-box__quote--bottom"></i></blockquote>
+                      <h5 class="feature-box__title">Jan Kasprzak</h5>
+                      <p class="feature-box__description">Korzystałem z usług firmy Pana Andrzeja</p>
+                    </div>
+                  </div>
+                  <div class="item">
+                    <div class="component feature-box">
+                      <blockquote class="feature-box__blockquote"><i class="fa fa-quote-left feature-box__quote feature-box__quote--top"></i>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque volutpat ex eget nunc facilisis, vitae posuere ligula ultricies. Mauris fringilla mi quis nisi iaculis accumsan. Phasellus eu nisi viverra nunc ultrices rhoncus ut at dui.<i class="fa fa-quote-right feature-box__quote feature-box__quote--bottom"></i></blockquote>
+                      <h5 class="feature-box__title">Tadeusz Zalewski</h5>
+                      <p class="feature-box__description">Korzystałem z usług firmy Pana Andrzeja</p>
+                    </div>
+                  </div>
+                  <div class="item">
+                    <div class="component feature-box">
+                      <blockquote class="feature-box__blockquote"><i class="fa fa-quote-left feature-box__quote feature-box__quote--top"></i>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque volutpat ex eget nunc facilisis, vitae posuere ligula ultricies. Mauris fringilla mi quis nisi iaculis accumsan. Phasellus eu nisi viverra nunc ultrices rhoncus ut at dui. <i class="fa fa-quote-right feature-box__quote feature-box__quote--bottom"></i></blockquote>
+                      <h5 class="feature-box__title">Zbigniew Kaczor</h5>
+                      <p class="feature-box__description">Korzystałem z usług firmy Pana Andrzeja</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
       </main>
+      <footer class="footer">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-3"></div>
+            <div class="col-md-5">
+              <div class="widget widget--footer">
+                <div class="widget-inner">
+                  <h5 class="widget_title">Informacje kontaktowe	</h5>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="widget widget--footer">
+                <div class="widget-inner">
+                  <h5 class="widget_title">Firma Bałtex</h5>
+                  <ul class="list-unstyled">
+                    <li><a href="#" title="Transport międzynarodowy">Transport międzynarodowy</a></li>
+                    <li><a href="#" title="Sprzedaż tarcicy">Sprzedaż tarcicy</a></li>
+                    <li><a href="#" title="Magazyn czasowego składowania">Magazyn czasowego składowania</a></li>
+                    <li><a href="#" title="Faq">FAQ		</a></li>
+                    <li><a href="#" title="Kontakt">Kontakt</a></li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </footer>
     </div>
     <script src="assets/js/vendor.min.js"></script>
     <script src="assets/js/plugins/plugins.min.js"></script>
