--- a/prod/index.html
+++ b/prod/index.html
@@ -267,13 +267,6 @@
             <div class="col-md-5">
               <div class="widget widget--footer">
                 <div class="widget-inner">
-                  <h5 class="widget_title">Informacje kontaktowe	</h5>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-4">
-              <div class="widget widget--footer">
-                <div class="widget-inner">
                   <h5 class="widget_title">Firma Bałtex</h5>
                   <ul class="list-unstyled">
                     <li><a href="#" title="Transport międzynarodowy">Transport międzynarodowy</a></li>
@@ -282,6 +275,32 @@
                     <li><a href="#" title="Faq">FAQ		</a></li>
                     <li><a href="#" title="Kontakt">Kontakt</a></li>
                   </ul>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="widget widget--footer">
+                <div class="widget-inner">
+                  <h5 class="widget_title">Informacje kontaktowe</h5>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="footer-post">
+          <div class="container">
+            <div class="row">
+              <div class="col-xs-12">
+                <div class="footer-post__inner">
+                  <div class="footer-post__brand">
+                    <h5 class="footer-post__logo">Bałtex FHU <sup>&#174;</sup></h5>
+                  </div>
+                  <div class="footer-post__list">
+                    <ul class="list-unstyled">
+                      <li class="footer-post__element"><a href="#" title="Polityka cookies" class="footer-post__anchor link">Polityka cookies</a></li>
+                      <li class="footer-post__element"><a href="#" title="Mapa strony" class="footer-post__anchor link">Mapa strony</a></li>
+                    </ul>
+                  </div>
                 </div>
               </div>
             </div>
