BAŁTEX-6 Dodanie pomocniczego menu nawigacyjnego

--- a/prod/index.html
+++ b/prod/index.html
@@ -58,24 +58,7 @@
                       <h6 class="nav-bar__subtitle"> <a href="#" title="Transport międzynarodowy" class="nav-bar__sneakpeak">Transport międzynarodowy</a><a href="#" title="Sprzedaż tarcicy" class="nav-bar__sneakpeak">Sprzedaż tarcicy</a><a href="#" title="Magazyn czasowego składowania" class="nav-bar__sneakpeak">Magazyn czasowego składowania</a></h6>
                     </div>
                     <ul class="nav-bar__nav list-unstyled">
-                      <li class="nav-bar__search"><a href="#" title="Wyszukaj frazy na stronie" class="nav-bar__icon js-searcher"><i aria-hidden="true" class="fa fa-search"></i></a></li>
-                      <li class="nav-bar__hamburger"><a href="#" title="Menu głowne strony" class="nav-bar__icon js-hamburger"><i aria-hidden="true" class="fa fa-bars"></i></a>
-                        <div class="nav-bar__dropdown">
-                          <ul class="nav-bar__submenu list-unstyled">
-                            <li><a href="#" title="Informacje kontaktowe"><i aria-hidden="true" class="fa fa-envelope"></i><span>Kontakt</span></a></li>
-                            <li><a href="#" title="Wydrukuj stronę" class="js-window-print"><i aria-hidden="true" class="fa fa-print"></i><span>Drukuj</span></a></li>
-                            <li><a href="#" title="Dodaj do ulubionych" class="js-bookmark-application"><i aria-hidden="true" class="fa fa-bookmark"></i><span>Ulubione</span></a></li>
-                          </ul>
-                          <div class="nav-bar__divider">
-                            <hr>
-                          </div>
-                          <ul class="nav-bar__submenu list-unstyled">
-                            <li><a href="#" title="Informacje kontaktowe"><i aria-hidden="true" class="fa fa-envelope"></i><span>Galeria</span></a></li>
-                            <li><a href="#" title="Informacje kontaktowe"><i aria-hidden="true" class="fa fa-envelope"></i><span>FAQ</span></a></li>
-                            <li><a href="#" title="Informacje kontaktowe"><i aria-hidden="true" class="fa fa-envelope"></i><span>Opinie</span></a></li>
-                          </ul>
-                        </div>
-                      </li>
+                      <li class="nav-bar__hamburger"><a href="#" title="Menu głowne strony" class="nav-bar__icon js-hamburger"><i aria-hidden="true" class="fa fa-bars"></i></a></li>
                     </ul>
                   </div>
                 </div>
@@ -97,6 +80,22 @@
             </div>
           </div>
         </nav>
+        <div class="sidebar-menu">
+          <div class="container">
+            <div class="row">
+              <div class="col-xs-12">
+                <ul class="sidebar-menu__submenu list-unstyled">
+                  <li><a href="#" title="Informacje kontaktowe"><code class="sidebar-menu__title">Kontakt</code><span class="sidebar-menu__subtitle">Skontakuj się z Nami</span></a></li>
+                  <li><a href="#" title="Wydrukuj stronę" class="js-window-print"><code class="sidebar-menu__title">Drukuj</code><span class="sidebar-menu__subtitle">Wydrukuj aktualną stronę</span></a></li>
+                  <li><a href="#" title="Dodaj do ulubionych" class="js-bookmark-application"><code class="sidebar-menu__title">Ulubione</code><span class="sidebar-menu__subtitle">Dodaj stronę do ulubionych</span></a></li>
+                  <li><a href="#" title="Informacje kontaktowe"><code class="sidebar-menu__title">Galeria</code><span class="sidebar-menu__subtitle">Spójrz na Nasze zdjęcia</span></a></li>
+                  <li><a href="#" title="Informacje kontaktowe"><code class="sidebar-menu__title">FAQ</code><span class="sidebar-menu__subtitle">Najczęściej zadawane pytania</span></a></li>
+                  <li><a href="#" title="Informacje kontaktowe"><code class="sidebar-menu__title">Opinie</code><span class="sidebar-menu__subtitle">Jak postrzegają Nas inni?</span></a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
         <section class="section section--ghost">
           <div data-items="1" data-arrows="false" data-dots="true" class="component main-slider">
             <div data-background="assets/images/slider-01.jpg" data-background-mobile="assets/images/slider-01.jpg" , data-thumb="Transport międzynarodowy" class="item main-slider__item">
@@ -225,7 +224,7 @@
               <div class="col-xs-12">
                 <header class="text-xs-center text-white">
                   <h3>Piszą..., a Ty czytaj</h3>
-                  <h4>Różne rzeczy, czasem lepsze, czasem </h4>
+                  <h4>Dowiedz się w jaki sposób jesteśmy postrzegani przez innych </h4>
                   <p>&nbsp;</p>
                 </header>
               </div>
@@ -268,12 +267,12 @@
               <div class="widget widget--footer">
                 <div class="widget-inner">
                   <h5 class="widget_title">Firma Bałtex</h5>
-                  <ul class="list-unstyled">
-                    <li><a href="#" title="Transport międzynarodowy">Transport międzynarodowy</a></li>
-                    <li><a href="#" title="Sprzedaż tarcicy">Sprzedaż tarcicy</a></li>
-                    <li><a href="#" title="Magazyn czasowego składowania">Magazyn czasowego składowania</a></li>
-                    <li><a href="#" title="Faq">FAQ		</a></li>
-                    <li><a href="#" title="Kontakt">Kontakt</a></li>
+                  <ul class="list-unstyled list--arrowed">
+                    <li><a href="transport-miedzynarodowy" title="Transport międzynarodowy"> <i aria-hidden="true" class="fa fa-angle-right"></i><span>Transport międzynarodowy</span></a></li>
+                    <li><a href="sprzedaz-tarcicy" title="Sprzedaż tarcicy"> <i aria-hidden="true" class="fa fa-angle-right"></i><span>Sprzedaż tarcicy</span></a></li>
+                    <li><a href="magazyn-czasowego-skladowania" title="Magazyn czasowego składowania"> <i aria-hidden="true" class="fa fa-angle-right"></i><span>Magazyn czasowego składowania</span></a></li>
+                    <li><a href="najczesciej-zadawane-pytania" title="Faq"> <i aria-hidden="true" class="fa fa-angle-right"></i><span>FAQ		</span></a></li>
+                    <li><a href="kontakt" title="Kontakt"> <i aria-hidden="true" class="fa fa-angle-right"></i><span>Kontakt</span></a></li>
                   </ul>
                 </div>
               </div>
@@ -282,6 +281,12 @@
               <div class="widget widget--footer">
                 <div class="widget-inner">
                   <h5 class="widget_title">Informacje kontaktowe</h5>
+                  <address class="address">
+                    <div class="address__item"><code>Telefon</code><a href="tel:123456789">123-456-789</a></div>
+                    <div class="address__item"><code>Fax</code><span>012-345-678</span></div>
+                    <div class="address__item"><code>E-mail</code><a href="mailto:testow@testowy.com.pl">testowy@testowy.com.pl</a></div>
+                    <div class="address__item"><code>Siedziba</code><span data-toggle="modal" data-target=".google-maps-direction">ul. Długowola 232, 27-300 Lipsko, Polska</span></div>
+                  </address>
                 </div>
               </div>
             </div>
@@ -293,15 +298,35 @@
               <div class="col-xs-12">
                 <div class="footer-post__inner">
                   <div class="footer-post__brand">
-                    <h5 class="footer-post__logo">Bałtex FHU <sup>&#174;</sup></h5>
+                    <p>&copy; 2016 F.H.U. Bałtex. Wszystkie prawa zastrzeżone.</p>
                   </div>
                   <div class="footer-post__list">
                     <ul class="list-unstyled">
-                      <li class="footer-post__element"><a href="#" title="Polityka cookies" class="footer-post__anchor link">Polityka cookies</a></li>
-                      <li class="footer-post__element"><a href="#" title="Mapa strony" class="footer-post__anchor link">Mapa strony</a></li>
+                      <li class="footer-post__element"><a href="polityka-cookies" title="Polityka cookies" class="footer-post__anchor link">Polityka cookies</a></li>
+                      <li class="footer-post__element"><a href="mapa-strony" title="Mapa strony" class="footer-post__anchor link">Mapa strony</a></li>
                     </ul>
                   </div>
                 </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div tabindex="-1" role="dialog" aria-labelledby="google-maps-direction" aria-hidden="true" class="modal fade google-maps-direction">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header"> 
+                <h6>Czy chcesz sprawdzić <strong>lokalizację firmy Bałtex</strong> na google maps?</h6>
+              </div>
+              <div class="modal-body">
+                <p>Google maps z lokalizacją otworzy się w nowym oknie. Umożliwi Ci to m.in.</p>
+                <ul class="list-unstyled">
+                  <li>- zlokalizowanie Naszej siedziby na mapie Polski</li>
+                  <li>- wytyczenie trasy pomiędzy 2 punktami</li>
+                </ul>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-primary js-btn-google-location">Zobacz widok mapy</button>
+                <button type="button" data-dismiss="modal" class="btn btn-secondary js-btn-modal-close">Rezygnuję</button>
               </div>
             </div>
           </div>
