BAŁTEX-8 Dodanie Web packa

--- a/prod/index.html
+++ b/prod/index.html
@@ -329,8 +329,9 @@
         </div>
       </footer>
     </div>
-    <script src="assets/js/vendor.min.js"></script>
-    <script src="assets/js/plugins/plugins.min.js"></script>
-    <script src="assets/js/core.js"></script>
+    <script src="assets/js/vendor.min.js" charset="UTF-8"></script>
+    <script src="assets/js/plugins/plugins.min.js" charset="UTF-8"></script>
+    <script src="assets/js/components/components.js" charset="UTF-8"></script>
+    <script src="assets/js/core.js" charset="UTF-8"></script>
   </body>
 </html>
