BAŁTEX-10 Poprawki do main-slidera, dodanie nowego wariantu listy

--- a/prod/doc.html
+++ b/prod/doc.html
@@ -4,6 +4,7 @@
 <html lang="en" class="no-js ie9"></html><![endif]-->
 <html class="no-js dom-html" lang="en" data-project-name="baltex" data-resized='250' data-mode-rewrite="on">
   <head>
+    <script type="text/javascript">var startTime = new Date().getTime();</script>
     <meta charset="utf-8">
     <meta name="description" content="Boilerplate - demo description">
     <meta name="author" content="Author">
