--- a/prod/index.html
+++ b/prod/index.html
@@ -4,6 +4,7 @@
 <html lang="en" class="no-js ie9"></html><![endif]-->
 <html class="no-js dom-html" lang="en" data-project-name="baltex" data-resized='250' data-mode-rewrite="on">
   <head>
+    <script type="text/javascript">var startTime = new Date().getTime();</script>
     <meta charset="utf-8">
     <meta name="description" content="Boilerplate - demo description">
     <meta name="author" content="Author">
@@ -148,7 +149,7 @@
             </div>
             <div class="row">
               <div class="col-xs-12">
-                <div data-dots="true" data-centerMode="true" data-centerPadding="30px" data-LGitems="3" data-MDitems="2" data-SMitems="2" data-XSitems="1" data-speed="700" data-arrows="false" data-initialSlide="1" data-autoplay="true" class="component ct-js-slick slick--centered">
+                <div data-dots="true" data-centerMode="true" data-centerPadding="30px" data-LGitems="3" data-MDitems="2" data-SMitems="2" data-XSitems="1" data-autoplaySpeed="7000" data-speed="1000" data-arrows="false" data-initialSlide="1" data-autoplay="true" class="component ct-js-slick slick--centered">
                   <div class="item">
                     <div class="info-box">
                       <div class="info-box__inner">
@@ -177,6 +178,14 @@
                         <div class="info-box__image"><img src="assets/images/company-contact.jpg"></div>
                         <div class="info-box__content">
                           <h5 class="info-box__title">Informacje kontaktowe</h5>
+                          <p class="info-box__description">Siedziba Naszej firmy znajduje się w powiecie Lipskim w województwie mazowieckim.</p>
+                          <ul class="list-unstyled list-header">
+                            <li class="list-header__item list-header__item--header">Dokładny adres</li>
+                            <li class="list-header__item">Długowola Pierwsza 467 <br> 27-300 Lipsko</li>
+                            <li class="list-header__item">Telefon: 012-345-678</li>
+                            <li class="list-header__item">Fax: 22-33-456-22</li>
+                            <li class="list-header__item">E-mail: testowy@testowy.com.pl</li>
+                          </ul>
                         </div>
                       </div>
                     </div>
@@ -186,7 +195,8 @@
                       <div class="info-box__inner">
                         <div class="info-box__image"><img src="assets/images/company-share.jpg"></div>
                         <div class="info-box__content">
-                          <h5 class="info-box__title">Udostępnij stronę</h5><i aria-hidden="true" class="fa fa-bookmark"></i>
+                          <h5 class="info-box__title">Udostępnij stronę</h5>
+                          <p class="info-box__description">Jeśli uważasz, że Nasza firma jest warta polecenia, możesz to zrobić korzystając z Facebooka, Twittera lub Google Plus. </p>
                         </div>
                       </div>
                     </div>
